<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvSelamat"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selamat"
            android:gravity="center"
            >
        </TextView>

        <TextView
            android:id="@+id/tvTipeMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipe_pelanggan"
            android:gravity="center"
            android:layout_marginTop="5dp"
            >
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:padding="15dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaksi"
                >
            </TextView>

            <TextView
                android:id="@+id/tvKodeBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kode_barang"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvNamaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama_barang"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvHargaBarang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvTotalHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_harga"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvDiskonHarga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/harga_diskon"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvDiskonMember"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_diskon"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:id="@+id/tvJumlahBayar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jumlah_bayar"
                android:layout_marginTop="5dp"
                >
            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terimakasih"
                android:layout_marginTop="50dp">
            </TextView>

        </LinearLayout>

        <Button
            android:id="@+id/btnShare"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bagikan"
            android:textSize="20dp"
            android:layout_marginTop="30dp"
            >
        </Button>

    </LinearLayout>

</LinearLayout>